# GoogleTestSample

./: CMakeLists.txt  README.md
test1/: CMakeLists.txt  test1.cpp
test2/: CMakeLists.txt  test2.cpp
